# EgisTec-EH575

./: .gitignore  Cargo.toml  README.md  libfprint.patch
archive/: Cargo.toml  LICENSE
archive/resources/test/match/: 1.tiff  2.tiff
archive/resources/test/register/: 10.tiff  3.tiff  5.tiff  6.tiff  8.tiff
archive/src/: common.rs  io.rs  lib.rs
benches/: algorithm.rs  convolve2d.rs  util.rs
examples/: burst_capture.rs
findings/: FingerPrint-Projects.txt  WindowsDrivers.txt  output.json
findings/EgisTec-EH575/: RegistryLog.txt
findings/EgisTec-EH575/Ghdira/EgisTecDecompilation.rep/: project.prp  projectState
findings/EgisTec-EH575/RizinCutter/: EgisTouchFPSensor0575.dll.rzdb
findings/EgisTec-EH575/decompiled_source/: extract.ipynb
findings/EgisTec-EH575/decompiled_source/ghidra/: EgisTouchFP0575-ooinject.cpp  EgisTouchFP0575.c  EgisTouchFPEngine0575.c  EgisTouchFPSensor0575.c  ooinject.py
findings/EgisTec-EH575/logs/: 575-0.pcap  575-1.pcap  575-2.pcap  575-3.pcap  EngineAdapter.txt  README.txt  SensorAdapter.txt  analysis.txt  linux.txt  logs_linux.txt  logs_linux2.txt  mapping.txt  original_windows.txt  vmware-0.pcap  vmware-1.pcap  vmware-2.pcap  vmware-3.pcap  vmware-4.pcap  vmware-5.pcap
findings/EgisTec-EH575/logs/traces/: FmtSum.txt  (+1 more)
findings/Usb_Device_Emulation/: egis_emu.py  usb.py
resources/test/register/: 1.tiff  11.tiff  2.tiff  4.tiff  7.tiff  9.tiff
src/: algorithm.rs  common.rs  io.rs  lib.rs  util.rs
src/algorithm/: Fingerprint.rs  FingerprintFeatures.rs  mod.rs
src/io/: FingerprintCapture.rs  mod.rs
tests/: util_test.rs
(+19 files in other folders)
