[package]
name = "egistec_eh575"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.5"
hex-literal = "0.3.1"
lazy_static = "1.4.0"
ordered-float = "2.0"
rusb = "0.8"
# shrust = "0.0.7"
# dialoguer = "0.8.0"
# https://towardsdatascience.com/awesome-rust-powered-command-line-utilities-b5359c38692

[dev-dependencies]
promptly = "0.3.0"
tiff = "0.7.0"
walkdir = "2.3.2"